vcluster-gitops/argocd/karpor/manifests/karpor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karpor-ingress
  namespace: karpor
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: karpor-juliet.us.demo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karpor-server
                port:
                  number: 7443
